# analysis_with_gpt

./: chatbot.sh  pyproject.toml
chatbot/: chatbot.py
preprocess/: df2json.py
