[tool.poetry]
name = "creator-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
openai = "^1.31.1"
scikit-learn = "^1.5.0"
openpyxl = "^3.1.3"
llama-index = "^0.10.44"
llama-index-llms-openai = "^0.1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
